-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083475 | emb-9 | Roland Westrelin | P1 | Resolved | Fixed | master |
There is a 8% regression on specjvm2008:crypto.aes and 1.5% regression on specjvm2008:serial on SPARC caused by JDK-7173584.
crypto.aes:
beforeJDK-7173584: 2958.01 ops/m
afterJDK-7173584: 2305.47 ops/m
current jdk9/jdk9: 2305.32 ops/m
current jdk9/hs-comp: 2308.35 ops/m
serial:
beforeJDK-7173584: 260.98 ops/m
afterJDK-7173584: 252.81 ops/m
current jdk9/jdk9: 253.49 ops/m
current jdk9/hs-comp: 253.93 ops/m
See the logs here:
http://cr.openjdk.java.net/~shade/8060252/
[1] Current hs-comp is:
$ hg tip
changeset: 7208:2b1ea93ea45e
tag: tip
user: thartmann
date: Mon Oct 13 12:30:37 2014 +0200
summary: 8046268: compiler/whitebox/ tests fail : must be osr_compiled
crypto.aes:
before
after
current jdk9/jdk9: 2305.32 ops/m
current jdk9/hs-comp: 2308.35 ops/m
serial:
before
after
current jdk9/jdk9: 253.49 ops/m
current jdk9/hs-comp: 253.93 ops/m
See the logs here:
http://cr.openjdk.java.net/~shade/8060252/
[1] Current hs-comp is:
$ hg tip
changeset: 7208:2b1ea93ea45e
tag: tip
user: thartmann
date: Mon Oct 13 12:30:37 2014 +0200
summary: 8046268: compiler/whitebox/ tests fail : must be osr_compiled
- backported by
-
JDK-8083475 JDK-7173584 compiler changes regress SPECjvm2008 on SPARC
-
- Resolved
-
- duplicates
-
JDK-8058355 SPECjvm2008-Serial performance regression on Solaris-SPARC starting with 9-b29
-
- Closed
-
- relates to
-
JDK-8058746 escape analysis special case code for array copy broken by 7173584
-
- Closed
-
-
JDK-7173584 Implement arraycopy as a macro node
-
- Resolved
-
-
JDK-8058349 SPECjbb2005 1.4% performance regression on Linux with 9-b29
-
- Resolved
-
-
JDK-8064703 crash running specjvm98's javac following 8060252
-
- Closed
-
(1 relates to)