8060252: JDK-7173584 compiler changes regress SPECjvm2008 on SPARC

Arraycopy code misses opportunities to optimize copies to just allocated array.

Reviewed-by: kvn